packages/concerto-cto/test/cto/bad/map.bad.cto
namespace com.acme@1.0.0

map Library {
  o String
  o String
  o Dictionary
}

concept Concept {
  o Library library
}
